[tool.poetry]
name = "columnhtmx"
version = "0.1.0"
description = ""
authors = ["ahmedali <ahmed@ajaali.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
